@@ -34,6 +34,12 @@ RULE_REAL( Character, ExpMultiplier, 0.5 )
 RULE_REAL( Character, AAExpMultiplier, 0.5 )
 RULE_REAL( Character, GroupExpMultiplier, 0.5 )
 RULE_REAL( Character, RaidExpMultiplier, 0.2 )
+RULE_BOOL( Character, UseXPConScaling, true )
+RULE_INT ( Character, LightBlueModifier, 40 ) 
+RULE_INT ( Character, BlueModifier, 90 )
+RULE_INT ( Character, WhiteModifier, 100 )
+RULE_INT ( Character, YellowModifier, 125 )
+RULE_INT ( Character, RedModifier, 150 ) 
 RULE_INT ( Character, AutosaveIntervalS, 300 )	//0=disabled
 RULE_INT ( Character, HPRegenMultiplier, 100)
 RULE_INT ( Character, ManaRegenMultiplier, 100)
